style: use span for tag/bookmark tags ... and make it inline-block to avoid wrapping
Based on work by Dominik Ruf.

--- a/kallithea/public/css/style.css
+++ b/kallithea/public/css/style.css
@@ -2452,6 +2452,7 @@ BIN_FILENODE = 6
 .tagtag,
 .booktag {
     float: left;
+    display: inline-block;
 }
 
 .right .logtags .phasetag,
